Still trying to fix background and scroll jump bugs

--- a/portfolio.css
+++ b/portfolio.css
@@ -75,6 +75,7 @@ header {
   left: 0;
   z-index: 2;
   min-height: 100vh;
+  max-height: 100vh;
   max-width: 100%;
   margin-right: auto;
   margin-left: auto; 
@@ -83,7 +84,7 @@ header {
 
 
   background: linear-gradient(177deg, rgba(20,41,62,0.99), #f05d5e);
-  background-size: 200% 200%;
+  /* background-size: 200% 200%; */
 
   -webkit-animation: header 30s ease infinite;
   -moz-animation: header 30s ease infinite;
